--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
     </footer> -->
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="close-btn-icon" width="18" height="18">
@@ -472,12 +472,12 @@
          </svg>
         </div>
 
-      </div>
+      </div> -->
 
       
 
 
-        <label class="modal-label"
+        <!-- <label class="modal-label"
             >Комментарий
             <textarea name="user-text" placeholder="Введите текст" class="modal-comment"></textarea>
           </label>
@@ -497,6 +497,6 @@
         
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
