зробив секцію переваги

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         </div>
       </section> -->
 
-      <!-- <section class="section">
+      <section class="benefits section">
         <ul class="work container">
           <li class="li-item list">
             <div class="li-div-icon">
-              <svg class="li-icon" width="70" height="70">
+              <svg class="li-icon" width="100%" height="70">
                 <use href="./img2/symbol-defs.svg#icon-antenna"></use>
               </svg>
             </div>
@@ -88,7 +88,7 @@
           </li>
           <li class="li-item list">
             <div class="li-div-icon">
-              <svg class="li-icon" width="70" height="70">
+              <svg class="li-icon" width="100%" height="70">
                 <use href="./img2/symbol-defs.svg#icon-clock"></use>
               </svg>
             </div>
@@ -100,7 +100,7 @@
           </li>
           <li class="li-item list">
             <div class="li-div-icon">
-              <svg class="li-icon" width="70" height="70">
+              <svg class="li-icon" width="100%" height="70">
                 <use href="./img2/symbol-defs.svg#icon-diagram"></use>
               </svg>
             </div>
@@ -112,7 +112,7 @@
           </li>
           <li class="li-item list">
             <div class="li-div-icon">
-              <svg class="li-icon" width="70" height="70">
+              <svg class="li-icon" width="100%" height="70">
                 <use href="./img2/symbol-defs.svg#icon-astronaut"></use>
               </svg>
             </div>
@@ -124,7 +124,7 @@
           </li>
         </ul>
       </section>
-      <section class="our-work">
+      <!-- <section class="our-work">
         <div class="our-work-list container">
           <h2 class="about-us">Чем мы занимаемся</h2>
           <ul class="link">
