--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
     </header> -->
 
     <main>
-      <!-- <section class="business section">
-        <div class="container">
+      <section class="business section">
+        <div class="business-container container">
           <h1 class="business-text">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="btn-service button-inline" data-modal-open>
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
 
-      <section class="benefits section">
+      <!-- <section class="benefits section">
         <ul class="work container">
           <li class="li-item list">
             <div class="li-div-icon">
@@ -123,7 +123,7 @@
             </p>
           </li>
         </ul>
-      </section>
+      </section> -->
       <!-- <section class="our-work">
         <div class="our-work-list container">
           <h2 class="about-us">Чем мы занимаемся</h2>
@@ -158,7 +158,7 @@
         </div>
       </section> -->
 
-      <section class="bcg-our-team section">
+      <!-- <section class="bcg-our-team section">
         <div class="team container">
           <h2 class="our-team">Наша команда</h2>
           <ul class="link">
@@ -308,7 +308,7 @@
             </li>
           </ul>
         </div>
-         </section>
+         </section> -->
         
         <!-- <section class="client section">
           <div class="container">
