зробив секцію портфоліо-картки

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     </header> -->
 
     <main>
-      <section class="business section">
+      <!-- <section class="business section">
         <div class="business-container container">
           <h1 class="business-text">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="btn-service button-inline" data-modal-open>
             Заказать услугу
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- <section class="benefits section">
         <ul class="work container">
