--- a/index.html
+++ b/index.html
@@ -316,33 +316,33 @@
             <ul class="client-list list">
               <li class="client__item client-item-margin">
                 <a href="" class="clients-link">
-                  <svg class="clients__logo" width="100%" height="60">
+                  <svg class="clients__logo" width="106" height="60">
                     <use href="./img2/symbol-defs.svg#icon-Logo"></use>
                   </svg>
                 </a>
               </li>
               <li class="client__item client-item-margin"><a href="" class="clients-link">
-                <svg class="clients__logo" width="100%" height="60">
+                <svg class="clients__logo" width="106" height="60">
                   <use href="./img2/symbol-defs.svg#icon-Logo-1"></use>
                 </svg>
               </a></li>
               <li class="client__item client-item-margin"><a href="" class="clients-link">
-                <svg class="clients__logo" width="100%" height="60">
+                <svg class="clients__logo" width="106" height="60">
                   <use href="./img2/symbol-defs.svg#icon-Logo-2"></use>
                 </svg>
               </a></li>
               <li class="client__item client-item-margin"><a href="" class="clients-link">
-                <svg class="clients__logo" width="100%" height="60">
+                <svg class="clients__logo" width="106" height="60">
                   <use href="./img2/symbol-defs.svg#icon-Logo-3"></use>
                 </svg>
               </a></li>
               <li class="client__item client-item-margin"><a href="" class="clients-link">
-                <svg class="clients__logo" width="100%" height="60">
+                <svg class="clients__logo" width="106" height="60">
                   <use href="./img2/symbol-defs.svg#icon-Logo-4"></use>
                 </svg>
               </a></li>
               <li class="client__item client-item-margin"><a href="" class="clients-link">
-                <svg class="clients__logo" width="100%" height="60">
+                <svg class="clients__logo" width="106" height="60">
                   <use href="./img2/symbol-defs.svg#icon-Logo-5"></use>
                 </svg>
               </a></li>
