почав робити хедер

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </section> -->
       
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       
       <div class="footer-container container">
         <div>
@@ -435,7 +435,7 @@
     </div>
 
 
-    </footer>
+    </footer> -->
 
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
