--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <a href="" class="header-logo link"
             >Web<span class="studio">Studio</span>
           </a>
-          <button type="button" class="menu-open-btn">
+          <button type="button" class="menu-open-btn" style="background-color: white;">
             <svg class="menu-icon" width="40px" height="40px">
-              <use href="./img2/symbol-defs.svg#icon-close"></use>
+              <use href="./img2/symbol-defs.svg#icon-menu"></use>
             </svg>
           </button>
           <ul class="header-nav list">
@@ -56,11 +56,62 @@
           <li class="item">
             <a href="tel:+380961111111" class="tel link"
               ><svg class="header-icon" width="10px" height="16px">
-                <use href="./img2/symbol-defs.svg#icon-smartphone"></use></svg
-              >+38 096 111 11 11</a
-            >
+                <use href="./img2/symbol-defs.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
+      </div>
+
+
+
+
+
+
+      <div class="mob-menu">
+        <div class="container">
+        <button type="button" class="menu-close-btn" style="background-color: white;">
+          <svg class="menu-icon" width="40px" height="40px">
+            <use href="./img2/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="mob-menu-top">
+        <ul class="mob-header-nav list">
+          <li class="mob-item">
+            <a href="./index.html" class="mob-menu-link current link">Студия</a>
+          </li>
+          <li class="mob-item">
+            <a href="./portfolio.html" class="mob-menu-link link">Портфолио</a>
+          </li>
+          <li class="mob-item"><a href="" class="mob-menu-link link">Контакты</a></li>
+        </ul>
+      </div>
+
+          <div class="mob-menu-bottom">
+        <ul class="mob-contact list">
+          <li class="mob-item">
+            <a href="tel:+380961111111" class="mob-tel link">+38 096 111 11 11</a>
+          </li>
+          <li class="mob-item">
+            <a href="mailto:info@devstudio.com" class="mob-email link">info@devstudio.com</a>
+          </li>
+          
+        </ul>
+        <ul class="mob-social">
+          <li class="mob-social-item list">
+              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="mob-social-link link">Instagram</a>
+          </li>
+          <li class="mob-social-item list">
+              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="mob-social-link link">Twitter</a>
+          </li>
+          <li class="mob-social-item list">
+              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="mob-social-link link">Facebook</a>
+          </li>
+          <li class="mob-social-item list">
+              <a href="" target="_blank" rel="noopener noreferrer nofollow" class="mob-social-link link">LinkedIn</a>
+          </li>
+      </ul>
+    </div>
+      </nav>
+    </div>
       </div>
     </header>
 
