--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="" class="header-logo link"
             >Web<span class="studio">Studio</span>
           </a>
-          <button type="button" class="menu-open-btn" style="background-color: white;">
+          <button type="button" class="js-menu-open-btn" style="background-color: white;">
             <svg class="menu-icon" width="40px" height="40px">
               <use href="./img2/symbol-defs.svg#icon-menu"></use>
             </svg>
@@ -66,14 +66,15 @@
 
 
 
-      <div class="mob-menu">
+      <div class="js-mob-menu">
         <div class="container">
-        <button type="button" class="menu-close-btn" style="background-color: white;">
+          <div class="mob-menu-top">
+        <button type="button" class="js-menu-close-btn" style="background-color: white;">
           <svg class="menu-icon" width="40px" height="40px">
             <use href="./img2/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
-        <div class="mob-menu-top">
+        
         <ul class="mob-header-nav list">
           <li class="mob-item">
             <a href="./index.html" class="mob-menu-link current link">Студия</a>
@@ -610,5 +611,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
