--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="" class="header-logo link"
             >Web<span class="studio">Studio</span>
           </a>
-          <button type="button" class="js-menu-open-btn" style="background-color: white;">
+          <button type="button" class="js-open-menu" aria-expanded="false" aria-controls="mobile-menu" style="background-color: white;">
             <svg class="menu-icon" width="40px" height="40px">
               <use href="./img2/symbol-defs.svg#icon-menu"></use>
             </svg>
@@ -66,10 +66,10 @@
 
 
 
-      <div class="js-mob-menu">
+      <div class="js-menu-container" id="mobile-menu">
         <div class="container">
           <div class="mob-menu-top">
-        <button type="button" class="js-menu-close-btn" style="background-color: white;">
+        <button type="button" class="js-close-menu" style="background-color: white;">
           <svg class="menu-icon" width="40px" height="40px">
             <use href="./img2/symbol-defs.svg#icon-close"></use>
           </svg>
