--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="header-container container">
         <nav class="main-nav">
           <a href="" class="header-logo link"
             >Web<span class="studio">Studio</span>
