--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <main>
       <section class="business section">
         <div class="business-container container">
-          <h1 class="business-text">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="business-text">Эффективные решения <br> для вашего бизнеса</h1>
           <button
             type="button"
             class="btn-service button-inline"
