виправляв помилки в моб меню

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,10 +78,10 @@
         
         <ul class="mob-header-nav list">
           <li class="mob-item">
-            <a href="./index.html" class="mob-menu-link current link">Студия</a>
+            <a href="./index.html" class="mob-menu-link link">Студия</a>
           </li>
           <li class="mob-item">
-            <a href="./portfolio.html" class="mob-menu-link link">Портфолио</a>
+            <a href="./portfolio.html" class="mob-menu-link current link">Портфолио</a>
           </li>
           <li class="mob-item"><a href="" class="mob-menu-link link">Контакты</a></li>
         </ul>
