--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <ul class="link">
             <li class="list">
               <div class="our-work-wrap">
-                <img srcset="./images/box-1-370.jpg 1x, ./images/box-1-740.jpg 2x" src="./images/img1.jpg" alt="человек печатает" class="box-img" >
+                <img srcset="./images/box-1-370.jpg 1x, ./images/box-1-740.jpg 2x" src="./images/img1.jpg" alt="человек печатает" />
                 <p class="our-work-top-text">Десктопные приложения</p>
               </div>
             </li>
@@ -201,7 +201,7 @@
               <div class="our-work-wrap">
                 <img srcset="./images/box-2-370.jpg 1x, ./images/box-2-740.jpg 2x"
                   src="./images/img2.jpg"
-                  alt="человек держит телефон"/>
+                  alt="человек держит телефон" />
                 <p class="our-work-top-text">Мобильные приложения</p>
               </div>
             </li>
@@ -209,7 +209,7 @@
               <div class="our-work-wrap">
                 <img srcset="./images/box-3-370.jpg 1x, ./images/box-3-740.jpg 2x"
                   src="./images/img3.jpg"
-                  alt="человек держит планшет"/>
+                  alt="человек держит планшет" />
                 <p class="our-work-top-text">Дизайнерские решения</p>
               </div>
             </li>
