--- a/portfolio.html
+++ b/portfolio.html
@@ -163,9 +163,9 @@
               
               <p class="portfolio__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
             </div>
-               <div class="cards modify-cards">
+               <div class="cards">
                 <h2 class="name">Технокряк</h2>
-                <p class="names__text modify-text">Веб-сайт</p>
+                <p class="names__text">Веб-сайт</p>
                </div>
               </a>
             
